update package name with @bb-cli prefix

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "bb-test-plugin-custom-config",
+  "name": "@bb-cli/bb-test-plugin-custom-config",
   "version": "0.1.0",
   "description": "Provide a custom karma configuration file to bb-test",
   "main": "index.js",
   "scripts": {},
   "keywords": [
-    "bb-cli",
-    "bb-test",
+    "@bb-cli",
+    "@bb-cli/bb-test",
     "bb-cli-test-plugin"
   ],
   "author": "Yash Kapila",
